# maca

./: .gitignore  CMakeLists.txt  README  morfeusz.tagset
CMakeScripts/: FindCorpus2.cmake  FindLoki.cmake  FindSFST.cmake  FindToki.cmake
analyse/: CMakeLists.txt  main.cpp
app/: main.cpp
data/: INFO.txt  a.cfg  a.ini  acro-infl.fst  acro-infl.txt  acro-uninfl.fst  acro-uninfl.txt  guesser-dicts-naivenkjp.ini  guesser-naivenkjp.ini  ikipi.tagset  ikipi2kipi.conv  kipi.tagset  kipi2ikipi.conv  map1  mm.conv  morfeusz-ikipi.cfg  morfeusz-ikipi.ini  morfeusz-kipi-ext.ini  morfeusz-kipi.cfg  morfeusz-kipi.ini  morfeusz-nkjp-guesser.ini  morfeusz-nkjp.ini  morfeusz.cfg  morfeusz.ini  morfeusz.tagset  morfeusz2-nkjp.ini  morfeusz2-to-nkjp.conv  morfkipi2ikipi.conv  morfo1104-ikipi-kipi.ini  morfo1104-ikipi.ini  morfo1104-lower.fst  morfo1122-ikipi.ini  morfo1122-kipi.ini  morfo1122-lower.fst  morfsgjp2kipi.conv  my.tagset  nkjp.tagset  nkjp2beatca.conv  nkjp2kipi.conv  sgjp.ini  (+2 more)
doc/: Plugins.txt  SFST-Howto.txt  Writing_configs.txt  api-example.cpp  maca_analyse.py
libmaca/: CMakeLists.txt  chunk.cpp  chunk.h  exception.cpp  exception.h  iob.cpp  iob.h  lexeme.cpp  lexeme.h  main.cpp  sentence.cpp  sentence.h  tag.cpp  tag.h  tagset.cpp  tagset.h  tagsetmanager.cpp  tagsetmanager.h  tagsetparser.cpp  tagsetparser.h  token.cpp  token.h  tokensource.cpp  tokensource.h  typedefs.h
libmaca/conv/: attributecopier.cpp  attributecopier.h  fold.cpp  fold.h  joinlayer.cpp  joinlayer.h  joinrule.cpp  joinrule.h  layer.cpp  layer.h  predicate.cpp  predicate.h  removedupes.cpp  removedupes.h  rulelayer.cpp  rulelayer.h  splitlayer.cpp  splitlayer.h  tagconvert.cpp  tagconvert.h  tagrule.cpp  tagrule.h  tagrulelayer.cpp  tagrulelayer.h  tagsetconverter.cpp  tagsetconverter.h
libmaca/io/: init.cpp  init.h  orthwriter.cpp  orthwriter.h  plain.cpp  plain.h  premorph.cpp  premorph.h  reader.cpp  reader.h  rft.cpp  rft.h  sax.cpp  sax.h  text.cpp  text.h  writer.cpp  writer.h  xces.cpp  xces.h  xcescommon.cpp  xcescommon.h  xcesreader.cpp  xcesreader.h  xcesvalidate.cpp  xcesvalidate.h  xceswriter.cpp  xceswriter.h
libmaca/morph/: constanalyser.cpp  constanalyser.h  convertinganalyser.cpp  convertinganalyser.h  dispatchanalyser.cpp  dispatchanalyser.h  guesser.cpp  guesser.h  guesser2.cpp  mapanalyser.cpp  mapanalyser.h  morfeusz2analyser.cpp  morfeusz2analyser.h  morfeuszanalyser.cpp  morfeuszanalyser.h  morfeuszcompat.cpp  morfeuszcompat.h  morphanalyser.cpp  morphanalyser.h  sfstanalyser.cpp  sfstanalyser.h
libmaca/util/: confignode.cpp  confignode.h  debug.cpp  debug.h  sentenceanalyser.cpp  sentenceanalyser.h  settings.cpp  settings.h  symboldictionary.cpp  symboldictionary.h  tokentimer.cpp  tokentimer.h
libpltagger/: CMakeLists.txt  boilerplate.cpp.in  boilerplate.h.in  chunk.cpp  chunk.h  config_d.in  confignode.cpp  confignode.h  debug.cpp  debug.h  exception.cpp  exception.h  iob.cpp  iob.h  lexeme.cpp  lexeme.h  main.cpp  mk.sh  sentence.cpp  sentence.h  settings.cpp  symboldictionary.cpp  symboldictionary.h  tag.cpp  tag.h  tagconvert.cpp  tagconvert.h  tagset.cpp  tagset.h  tagsetconverter.cpp  tagsetconverter.h  tagsetmanager.cpp  tagsetmanager.h  tagsetparser.cpp  tagsetparser.h  token.cpp  token.h  tokensource.cpp  tokensource.h  typedefs.h
libpltagger/app/: CMakeLists.txt  main.cpp
libpltagger/conv/: attributecopier.cpp  attributecopier.h  fold.cpp  fold.h  joinlayer.cpp  joinlayer.h  joinrule.cpp  joinrule.h  layer.cpp  layer.h  predicate.cpp  predicate.h  rule.cpp  rule.h  rulelayer.cpp  rulelayer.h  splitlayer.cpp  splitlayer.h  tagconvert.cpp  tagconvert.h  tagrule.cpp  tagrule.h  tagrulelayer.cpp  tagrulelayer.h  tagsetconverter.cpp  tagsetconverter.h
libpltagger/io/: init.cpp  init.h  orthwriter.cpp  orthwriter.h  plain.cpp  plain.h  premorph.cpp  premorph.h  reader.cpp  reader.h  writer.cpp  writer.h  xces.cpp  xces.h  xcescommon.cpp  xcescommon.h  xcesreader.cpp  xcesreader.h  xcesvalidate.cpp  xcesvalidate.h  xceswriter.cpp  xceswriter.h
libpltagger/morph/: constanalyser.cpp  constanalyser.h  creator.cpp  creator.h  dispatchanalyser.cpp  dispatchanalyser.h  init.cpp  init.h  mapanalyser.cpp  mapanalyser.h  morfeuszanalyser.cpp  morfeuszanalyser.h  morfeuszcompat.cpp  morfeuszcompat.h  morphanalyser.cpp  morphanalyser.h  sfstanalyser.cpp  sfstanalyser.h
libpltagger/tagset-tool/: CMakeLists.txt  main.cpp
libpltagger/util/: confignode.cpp  confignode.h  debug.cpp  debug.h  settings.cpp  settings.h  symboldictionary.cpp  symboldictionary.h
maca-analyse/: CMakeLists.txt  batch.cpp  main.cpp
maca-app/: CMakeLists.txt  main.cpp
maca-convert/: CMakeLists.txt  main.cpp
maca-reanalyse/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  config_d.in  debug.cpp  debug.h  exception.h  lexeme.cpp  lexeme.h  main.cpp  symboldictionary.cpp  symboldictionary.h  tag.cpp  tag.h  tagconvert.cpp  tagconvert.h  tagset.cpp  tagset.h  tagsetconverter.cpp  tagsetconverter.h  tagsetparser.cpp  tagsetparser.h  token.cpp  token.h
src/app/: CMakeLists.txt  main.cpp
src/morph/: constanalyser.cpp  constanalyser.h  dispatchanalyser.cpp  dispatchanalyser.h  mapanalyser.cpp  mapanalyser.h  morfeuszanalyser.cpp  morfeuszanalyser.h  morfeuszcompat.cpp  morfeuszcompat.h  morphanalyser.cpp  morphanalyser.h  sfstanalyser.cpp  sfstanalyser.h
swig/: CMakeLists.txt  maca.i  plaintextreader.i  premorphtextreader.i
tagset-convert/: CMakeLists.txt  main.cpp
tagset-tool/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  basic.cpp  compareconv.cpp  compareconv.h  conv.cpp  main.cpp  morph_basic.cpp  tag_split.cpp  tagset_parse.cpp  test-sanity.sh
tests/compare-conv/: test.out
tests/compare-conv/join-split/: dis-joined1.xml  dis-joined2.xml  dis-plain1.xml  dis-plain2.xml  joined.tagset  plain.tagset  splitter.conv
tools/: button.sh  purge.sh  readutt.py  snippets  tab-lower.py  tab-to-sfst.cpp  tab-to-sfst.py  tabclean.py  tabtagset.py  test_tablines.py
